Added capability to page actvivites by specifying offset=[starting record] and pageSize=[activities to return] as query parameters
